# Simple_Serial

./: CMakeLists.txt  Drage_Widget.cpp  Drage_Widget.h  LICENSE  README.md  Serial.cpp  Serial.h  Thread.cpp  Thread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
